# AtLAST_sensitivity_calculator

./: .gitignore  .readthedocs.yaml  HISTORY.rst  LICENSE  Makefile  README.md  app.py  environment.yml  jcmt_inputs.yaml  log_output_parameters.txt  makefile  pyproject.toml  readme.md  requirements.txt  run.py  run_jcmt.py  sensitivity-calculator.py  sensitivity_calculator.txt  setup.py  testing_calculations.py  user_inputs.yaml
.github/workflows/: backend-tests.yml  lint-test.yml  python-app.yml
AtLAST_Simulator_examples/: Continuum_example.ipynb  Line_example.ipynb  README.md
DELETEweb_client/: requirements.txt
DELETEweb_client/secrets/: .env-copy
Jupyter_Notebooks/AtLAST_Simulator_examples/: Continuum_example.ipynb  Line_example.ipynb  README.md
Jupyter_Notebooks/Instrument_Walkthroughs/: Chai_instrument_walkthrough.ipynb  Finer_instrument_walkthrough.ipynb  Muscat_instrument_walkthrough.ipynb  Sepia_instrument_walkthrough.ipynb  (+1 more)
am_code/: AM FOR AtLAST README  README.md  make_grid.py
atlast_sc/: README.MD  __init__.py  atmosphere_params.py  calculator.py  config.py  constants.py  data.py  derived_groups.py  efficiencies.py  exceptions.py  factory.py  inputs.py  instrument.py  models.py  packages_atlast_sc.calculator.puml  parameter_setup.py  sefd.py  sensitivity.py  system_temperature.py  temperature.py  temperatures.py  utils.py
atlast_sc/demo/: run.py
atlast_sc_tests/: conftest.py  utils.py
configs/: config.py  default_inputs.yaml  fixed_config.py  setup_config.py  setup_inputs.yaml  testing_config.py  user_config.py  user_inputs.yaml
demo/: run.py
dev_utils/: run.py
docs/: README.md
fastapi_tests/: test_main.py
fastapi_web_client/: context_processors.py  crud.py  main.py  schemas.py
frontend/: user_inputs.py
functions/: atm_model.py  atmosphere_params.py  calculations.py  sensitivity.py  sky_model.py
logs/: README.md  log_output_parameters.txt  repeat.yaml
templates/: SensitivityCalculator.html  atlast-clone.html
testing/: test_sefd.py  test_sensitivity.py  test_temperatures.py
tests/: conftest.py  test_atmosphere.py  test_calculator.py  test_efficiencies.py  test_sefd.py  test_sensitivity.py  test_temperatures.py  test_user_inputs.yaml  test_utilities.py  utils.py
web_client/: .flaskenv  .secrets  Dockerfile  calculator.py  context_processors.py  crud.py  main.py  requirements.txt  schemas.py  sensitivity-calculator.py  utils.py
(+195 files in other folders)
