[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["atlast_sc*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.yaml"]

[project]
name = "atlast_sc"
version = "2.0.0-alpha.3"
authors = [
    { name="Joanna Ramasawmy", email="joanna.ramasawmy@stfc.ac.uk" },
    { name="Fiona Kirton", email="fiona.kirton@gmail.com"}
]
description = "AtLAST sensitivity calculator"
#license = "MIT"
requires-python = ">=3.10, <3.13"
dependencies = [
    "astropy == 5.3.*",
    "numpy == 1.26.*",
    "scipy == 1.11.*",
    "pyyaml == 6.0.*",
    "pydantic == 2.12.*"
]

[project.urls]
repository="https://github.com/ukatc/AtLAST_sensitivity_calculator"
